testenv/eeen489_robot/src/log/build_2023-06-29_14-02-56/ultrasonics/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/ubuntu/Documents/engr489/testenv/eeen489_robot/src/install/ultrasonics/lib/python3.10/site-packages/ultrasonics/ultrasonic_node_publisher.py", line 11
    self.publisher_ = self.create_publisher(Int32,"Ultra{}".format(self.get_parameter('addr').value)),10)
                                                                                                        ^
SyntaxError: unmatched ')'

